# MinecraftServerCore

./: CMakeLists.txt  MinecraftCore.ilk  main.cpp  registry-codec.json  registry-codec.nbt  server.ini
include/: Buffer.h  Connection.h  DataTypes.h  File.h  Packet.h  Server.h  SocketServer.h
src/: Buffer.cpp  Connection.cpp  DataTypes.cpp  File.cpp  Server.cpp  SocketServer.cpp
